added error directive

--- a/src/app/products/pages/add/add.component.html
+++ b/src/app/products/pages/add/add.component.html
@@ -1,19 +1,23 @@
 <h1 class="mt-5">Add product</h1>
 <hr>
 
-<form>
+<form [formGroup]="myForm">
     <div class="row g-3 align-items-center mb-3">
         <div class="col-auto">
             <label class="col-form-label">Name:</label>
         </div>
 
         <div class="col-auto">
-            <input type="text" class="form-control">
+            <input type="text" 
+                   class="form-control"
+                   formControlName="name">
         </div>
 
         <div class="col-auto">
-            <span class="form-text">
-                Required
+            <span error-msg
+                  [message]="text"
+                  [color]="color"
+                  *ngIf="invalidForm('name')">
             </span>
         </div>
 
@@ -21,13 +25,18 @@
 
     <div class="row mt-3">
         <div class="col">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary"
+                    (click)="changeName()">
                 Save
+            </button>
+            <button class="btn btn-primary mx-2"
+                    (click)="changeColor()">
+                Change color
             </button>
         </div>
     </div>
 </form>
 
-<h3 class="mt-5">
-    Form
-</h3>
+<h3 class="mt-5">Form</h3>
+<pre>Value: {{ myForm.value | json }}</pre>
+<pre>Value: {{ myForm.valid }}</pre>
